--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,18 @@
-.box{
-    border:2px solid black;
+.box {
+  border: 2px solid black;
+}
+
+.abc {
+    color:white;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 10%;
+} 
+.abc:hover {
+  background-color: white;
+  color:black;
+}
+.active{
+    
+    font-weight: bold;
 }
